# shop

./: .gitignore  .pre-commit-config.yaml  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 6dfc16c5835f_create_orders_order_items_tables.py  a3f4edcbcd35_products_table_and_relationship_with_.py  ab14fa75d98b_initial_migration.py  f4b535797341_remove_datetime_fields_from_products_.py
src/: __init__.py  celeryapp.py  config.py  database.py  exceptions.py  main.py  utils.py
src/cart/: cart.py  router.py  schemas.py  service.py
src/categories/: models.py  repository.py  router.py  schemas.py  service.py
src/configs/: celeryconfig.py  config.py
src/orders/: models.py  repository.py  router.py  schemas.py  service.py  tasks.py
src/products/: constants.py  models.py  repository.py  router.py  schemas.py  service.py
tests/: conftest.py  utils.py
tests/test_cart/: test_card_add.py  test_cart_add.py  test_cart_get.py
tests/test_categories/: test_categories_create.py  test_category_create.py  test_category_delete.py  test_category_get.py  test_category_list.py  test_category_update.py
tests/test_products/: test_product_create.py  test_product_delete.py  test_product_get.py  test_product_list.py  test_product_update.py
